KoRgbaInterleavers: fix compilation with xsimd 8.1.0

BUG: 455799
(cherry picked from commit dcf4bf00bc3bcbc7910c5c6871ec621bde1c5b6a)